--- a/pac-config/services/nginx/1-nginx.yaml
+++ b/pac-config/services/nginx/1-nginx.yaml
@@ -17,13 +17,34 @@ spec:
         - name: nginx
           image: nginx:latest
           ports:
-            - containerPort: 80
+            - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 2
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 10
+          resources:
+            requests:
+              cpu: 10m
+              memory: 32Mi
+            limits:
+              cpu: 100m
+              memory: 128Mi
           volumeMounts:
             - name: static-files
               mountPath: /usr/share/nginx/html
             - name: nginx-config
               mountPath: /etc/nginx/nginx.conf
               subPath: nginx.conf
+            - name: nginx-cache
+              mountPath: /var/cache/nginx
+            - name: run-tmp
+              mountPath: /run
       volumes:
         - name: static-files
           persistentVolumeClaim:
@@ -31,3 +52,7 @@ spec:
         - name: nginx-config
           configMap:
             name: nginx-config
+        - name: nginx-cache
+          emptyDir: {}
+        - name: run-tmp
+          emptyDir: {}
