--- a/pac-config/services/nginx/2-service.yaml
+++ b/pac-config/services/nginx/2-service.yaml
@@ -7,7 +7,8 @@ spec:
   selector:
     app: nginx
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
+    - name: http
+      protocol: TCP
+      port: 8080
+      targetPort: 8080
   type: ClusterIP
