feat(charts): Route53 DNS-01 for local + VSO wiring
- Add Route53 ClusterIssuer for DNS-01 (staging/prod toggle via values)
- Switch nginx Routes to use Route53 issuer (letsencrypt-dns01-route53-local)
- Wire Vault→Secret via VSO for AWS creds (route53-credentials in cert-manager)
- Plumb parameters through ApplicationSet → umbrella → vault-runtime
- Update docs for DNS-01 with Route53 and IAM policy
- Set email to capestany@gmail.com and enable production ACME for local

Notes:
- HTTP-01 remains available but disabled for nginx routes due to external TCP/80 constraints.
- No secrets committed; credentials sourced from Vault at gitops/cert-manager/route53.

--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -26,6 +26,12 @@ envs:
     strfryEnabled: true
     couchbaseEnabled: true
     certManagerEnabled: true
+    # Route53 DNS-01 via VSO on local
+    certManagerCloudflareTokenEnabled: false
+    certManagerRoute53CredentialsEnabled: true
+    certManagerRoute53CredentialsPath: cert-manager/route53
+    certManagerRoute53SecretName: route53-credentials
+    certManagerRoute53SecretNamespace: cert-manager
     nginxSitesEnabled: true
     bootstrapOperatorsEnabled: true
     # CAO defaults for local (verify against docs/OPERATOR-VERSIONS.md on your cluster)
