--- a/charts/bitiq-umbrella/templates/app-vault-operators.yaml
+++ b/charts/bitiq-umbrella/templates/app-vault-operators.yaml
@@ -25,6 +25,17 @@ spec:
           gitops: {{ .Values.gitopsNamespace }}
           pipelines: {{ .Values.pipelinesNamespace }}
           app: {{ .Values.appNamespace }}
+        secrets:
+          cloudflareApiToken:
+            enabled: {{ default false .Values.certManager.cloudflareApiTokenEnabled }}
+            path: {{ .Values.certManager.cloudflareApiTokenPath | default "cert-manager/cloudflare" | quote }}
+            destinationName: {{ .Values.certManager.cloudflareSecretName | default "cloudflare-api-token" | quote }}
+            namespace: {{ .Values.certManager.cloudflareSecretNamespace | default "cert-manager" | quote }}
+          route53Credentials:
+            enabled: {{ default false .Values.certManager.route53CredentialsEnabled }}
+            path: {{ .Values.certManager.route53CredentialsPath | default "cert-manager/route53" | quote }}
+            destinationName: {{ .Values.certManager.route53SecretName | default "route53-credentials" | quote }}
+            namespace: {{ .Values.certManager.route53SecretNamespace | default "cert-manager" | quote }}
   destination:
     server: https://kubernetes.default.svc
     namespace: {{ .Values.gitopsNamespace }}
@@ -92,4 +103,3 @@ spec:
     syncOptions:
       - CreateNamespace=true
 {{- end }}
-
