--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -39,6 +39,15 @@ couchbase:
   enabled: false
 certManager:
   enabled: false
+  # Optional: enable syncing a Cloudflare API token from Vault via VSO to support DNS-01 issuers
+  cloudflareApiTokenEnabled: false
+  cloudflareApiTokenPath: cert-manager/cloudflare
+  cloudflareSecretName: cloudflare-api-token
+  cloudflareSecretNamespace: cert-manager
+  route53CredentialsEnabled: true
+  route53CredentialsPath: cert-manager/route53
+  route53SecretName: route53-credentials
+  route53SecretNamespace: cert-manager
 
 nginxSites:
   enabled: false
