--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -89,6 +89,22 @@ spec:
               value: '{{ "{{ .couchbaseEnabled | default false }}" }}'
             - name: certManager.enabled
               value: '{{ "{{ .certManagerEnabled | default false }}" }}'
+            - name: certManager.cloudflareApiTokenEnabled
+              value: '{{ "{{ .certManagerCloudflareTokenEnabled | default false }}" }}'
+            - name: certManager.cloudflareApiTokenPath
+              value: '{{ "{{ .certManagerCloudflareTokenPath | default \"gitops/data/cert-manager/cloudflare\" }}" }}'
+            - name: certManager.cloudflareSecretName
+              value: '{{ "{{ .certManagerCloudflareSecretName | default \"cloudflare-api-token\" }}" }}'
+            - name: certManager.cloudflareSecretNamespace
+              value: '{{ "{{ .certManagerCloudflareSecretNamespace | default \"cert-manager\" }}" }}'
+            - name: certManager.route53CredentialsEnabled
+              value: '{{ "{{ .certManagerRoute53CredentialsEnabled | default false }}" }}'
+            - name: certManager.route53CredentialsPath
+              value: '{{ "{{ .certManagerRoute53CredentialsPath | default \"cert-manager/route53\" }}" }}'
+            - name: certManager.route53SecretName
+              value: '{{ "{{ .certManagerRoute53SecretName | default \"route53-credentials\" }}" }}'
+            - name: certManager.route53SecretNamespace
+              value: '{{ "{{ .certManagerRoute53SecretNamespace | default \"cert-manager\" }}" }}'
             - name: nginxSites.enabled
               value: '{{ "{{ .nginxSitesEnabled | default false }}" }}'
             - name: bootstrapOperators.enabled
