--- a/charts/cert-manager-config/values-local.yaml
+++ b/charts/cert-manager-config/values-local.yaml
@@ -15,6 +15,8 @@ dns01:
     email: capestany@gmail.com
     production: true
     region: us-east-1
+    # Explicit hosted zone ID for cyphai.com to avoid in-cluster DNS discovery issues
+    hostedZoneID: Z02889471UKP31JE18HPE
     credentialsSecretRef:
       name: route53-credentials
       accessKeyIDKey: access-key-id
