feat(nginx): switch www.cyphai.com to Ingress + cert-manager
- Replace OpenShift Route with Ingress for cyphai.com/www
- Add TLS via cert-manager ingress-shim using Route53 issuer
- Include apex host to support nginx-level redirect
- Codify cert-manager operator DNS recursion args via chart

--- a/charts/cert-manager-config/values-local.yaml
+++ b/charts/cert-manager-config/values-local.yaml
@@ -21,3 +21,7 @@ dns01:
       name: route53-credentials
       accessKeyIDKey: access-key-id
       secretAccessKeyKey: secret-access-key
+operatorOverrides:
+  enabled: true
+  dns01:
+    recursiveNameservers: "1.1.1.1:53,8.8.8.8:53"
