--- a/charts/cert-manager-config/values-common.yaml
+++ b/charts/cert-manager-config/values-common.yaml
@@ -19,3 +19,8 @@ dns01:
       name: route53-credentials
       accessKeyIDKey: access-key-id
       secretAccessKeyKey: secret-access-key
+
+operatorOverrides:
+  enabled: false
+  dns01:
+    recursiveNameservers: "1.1.1.1:53,8.8.8.8:53"
