docs: update MIGRATION_PLAN for Ingress + Route53 DNS-01 (#118)
* fix(cert-manager): add hostedZoneID for cyphai.com and tune DNS precheck

- Set dns01.route53.hostedZoneID=Z02889471UKP31JE18HPE for local
- Operator-level: documented/configured recursive nameservers (1.1.1.1, 8.8.8.8)

* feat(nginx): switch www.cyphai.com to Ingress + cert-manager

- Replace OpenShift Route with Ingress for cyphai.com/www
- Add TLS via cert-manager ingress-shim using Route53 issuer
- Include apex host to support nginx-level redirect
- Codify cert-manager operator DNS recursion args via chart

* refactor(nginx): convert all static-site domains to Ingress + cert-manager

- Replace OpenShift Routes with Ingress for: didgo.com, paulcapestany.com, bitiq.io,
  noelcapestany.com, beatricecapestany.com, ipiqi.com, neuance.net
- Annotate with Route53 DNS-01 issuer and unique TLS secret per domain
- Update ClusterIssuer template to support multiple Route53 zones via selector
- Add zone IDs for all domains in values-local.yaml

* chore(cleanup): remove Cloudflare DNS-01 artifacts and docs

- Drop Cloudflare ClusterIssuer template and VSO secret wiring
- Remove Cloudflare parameters from umbrella and ApplicationSet
- Update nginx/docs to reference Route 53 DNS-01 and Ingress
- Keep cloudflared (tunnel) mentions in runbooks; unrelated to DNS-01 provider

* docs: update MIGRATION_PLAN for Ingress + Route53 DNS-01

- Prefer Ingress for public endpoints in local
- Default to Route 53 DNS-01; HTTP-01 optional
- Update status summary and tasks; remove Route-centric wording
- Refresh appendix and recent changes

* fix(nginx): satisfy yamllint (remove trailing blank lines in Ingress manifests)

--- a/charts/cert-manager-config/values-local.yaml
+++ b/charts/cert-manager-config/values-local.yaml
@@ -4,10 +4,6 @@ http01:
   email: capestany@gmail.com
   production: false
 
-# Optional: DNS-01 (Cloudflare) for environments where inbound TCP/80 is blocked.
-# Requires a Kubernetes Secret with a Cloudflare API token. Do NOT commit secrets.
-# Recommended: manage the Secret via Vault Secrets Operator (VSO) in the
-# cert-manager namespace with data key "api-token".
 dns01:
   route53:
     enabled: true
@@ -15,7 +11,28 @@ dns01:
     email: capestany@gmail.com
     production: true
     region: us-east-1
+    zones:
+      - zone: cyphai.com
+        hostedZoneID: Z02889471UKP31JE18HPE
+      - zone: didgo.com
+        hostedZoneID: ZPOF2JE05NGE4
+      - zone: paulcapestany.com
+        hostedZoneID: Z03183593TRC0TQ7HVQYU
+      - zone: bitiq.io
+        hostedZoneID: ZPCVSGRXCIK5E
+      - zone: noelcapestany.com
+        hostedZoneID: Z056483715JLINW841SV7
+      - zone: beatricecapestany.com
+        hostedZoneID: Z079077016RPVX58KHIKL
+      - zone: ipiqi.com
+        hostedZoneID: Z3PIMZQLSMODH8
+      - zone: neuance.net
+        hostedZoneID: Z0726808X55WJNUN7BTX
     credentialsSecretRef:
       name: route53-credentials
       accessKeyIDKey: access-key-id
       secretAccessKeyKey: secret-access-key
+operatorOverrides:
+  enabled: true
+  dns01:
+    recursiveNameservers: "1.1.1.1:53,8.8.8.8:53"
