--- a/charts/cert-manager-config/values-common.yaml
+++ b/charts/cert-manager-config/values-common.yaml
@@ -23,4 +23,6 @@ dns01:
 operatorOverrides:
   enabled: false
   dns01:
-    recursiveNameservers: "1.1.1.1:53,8.8.8.8:53"
+    recursiveNameservers:
+      - 1.1.1.1:53
+      - 8.8.8.8:53
