--- a/charts/cert-manager-config/values-local.yaml
+++ b/charts/cert-manager-config/values-local.yaml
@@ -35,4 +35,6 @@ dns01:
 operatorOverrides:
   enabled: true
   dns01:
-    recursiveNameservers: "1.1.1.1:53,8.8.8.8:53"
+    recursiveNameservers:
+      - 1.1.1.1:53
+      - 8.8.8.8:53
