--- a/docs/examples/systemd/route53-apex-ddns.service
+++ b/docs/examples/systemd/route53-apex-ddns.service
@@ -8,10 +8,10 @@ Wants=network-online.target
 Type=oneshot
 # Use a dedicated AWS profile with least-privilege IAM
 Environment=AWS_PROFILE=route53-ddns
-# Or load credentials from an env file (uncomment, create /etc/route53-apex-ddns.env)
-# EnvironmentFile=-/etc/route53-apex-ddns.env
+# Enable verbose debug logging/tracing in the updater script
+Environment=ROUTE53_DDNS_DEBUG=1
 # Ensure the script and AWS CLI are in PATH for the service context
 Environment=PATH=/usr/local/bin:/usr/bin:/bin
 # Optional: point to a zones file (copy sample to /etc first)
-# Environment=ROUTE53_DDNS_ZONES_FILE=/etc/route53-apex-ddns.zones
+Environment=ROUTE53_DDNS_ZONES_FILE=/etc/route53-apex-ddns.zones
 ExecStart=/usr/local/bin/route53-apex-ddns.sh
