feat(umbrella): add CAO via Helm for local
- New Application installs couchbase/couchbase-operator + admission
- Toggle couchbaseOperator.enabled exposed and wired through ApplicationSet

fix(couchbase): single-node CRC schema + buckets

- CAO v2 schema: volumeClaimTemplates + servers[].name + mounts by template name
- Single-node, hostpath defaults (no ODF) for ENV=local
- Admin Route → Service couchbase-cluster:8091
- Buckets mirror pac-config (with safe backend defaults)

ref(appset): pass couchbaseOperatorEnabled to umbrella

--- a/charts/bitiq-umbrella/templates/app-couchbase-operator.yaml
+++ b/charts/bitiq-umbrella/templates/app-couchbase-operator.yaml
@@ -19,6 +19,7 @@ spec:
     chart: couchbase-operator
     targetRevision: 2.81.1
     helm:
+      releaseName: cb-operator
       values: |
         install:
           couchbaseOperator: true
@@ -48,4 +49,3 @@ spec:
     syncOptions:
       - CreateNamespace=true
 {{- end }}
-
