--- a/charts/couchbase-cluster/templates/buckets.yaml
+++ b/charts/couchbase-cluster/templates/buckets.yaml
@@ -8,6 +8,12 @@ spec:
   cluster: {{ $root.Values.clusterName | default "couchbase-cluster" | quote }}
   memoryQuota: {{ .memory | quote }}
   ioPriority: {{ default "low" .ioPriority | quote }}
+  {{- if .storageBackend }}
+  storageBackend: {{ .storageBackend | quote }}
+  {{- end }}
+  {{- if .evictionPolicy }}
+  evictionPolicy: {{ .evictionPolicy | quote }}
+  {{- end }}
   replicas: 1
   conflictResolution: seqno
 ---
