--- a/charts/couchbase-cluster/values-local.yaml
+++ b/charts/couchbase-cluster/values-local.yaml
@@ -1,13 +1,35 @@
 # Local (CRC) defaults: single-node, hostpath classes via cluster default
+image: couchbase/server:7.2.4
+
 servers:
   size: 1
   storageClassRWO: ""
   storageClassRWX: ""
-quotas:
-  analytics: 0Mi
+clusterQuotas:
+  data: 512Mi
+  index: 256Mi
+  query: 256Mi
+  search: 256Mi
+  eventing: 256Mi
+  # analytics disabled by not enabling the service
 route:
   enabled: true
   host: "cb.cyphai.com"
-  serviceName: couchbase-cluster-ui
+  serviceName: couchbase-cluster
   targetPort: 8091
   clusterIssuerName: letsencrypt-http01-local
+
+# Buckets aligned to prior manifests but sized for local CRC
+buckets:
+  - name: all-nostr-events
+    memory: 512Mi
+    ioPriority: high
+  - name: dev-eventing-threads
+    memory: 256Mi
+    storageBackend: couchstore
+  - name: dev-threads
+    memory: 256Mi
+    storageBackend: couchstore
+  - name: dev-eventing-nostr-ai
+    memory: 256Mi
+    storageBackend: couchstore
