feat(couchbase): add Ingress + cert-manager for admin UI (local)

--- a/charts/couchbase-cluster/values-common.yaml
+++ b/charts/couchbase-cluster/values-common.yaml
@@ -34,4 +34,12 @@ route:
   targetPort: 8091
   clusterIssuerName: ""
 
+ingress:
+  enabled: false
+  host: ""
+  className: ""
+  tlsSecretName: ""
+  clusterIssuerName: ""
+  targetPort: 8091
+
 baseDomain: ""
