fix(couchbase): prefer Ingress for admin UI; disable Route on local to avoid cert conflict

--- a/charts/couchbase-cluster/values-local.yaml
+++ b/charts/couchbase-cluster/values-local.yaml
@@ -13,7 +13,7 @@ clusterQuotas:
   eventing: 256Mi
   # analytics disabled by not enabling the service
 route:
-  enabled: true
+  enabled: false
   host: "cb.cyphai.com"
   serviceName: couchbase-cluster
   targetPort: 8091
