fix(couchbase): use couchstore for all-nostr-events on local (magma requires >=1Gi bucket + higher data quota)

--- a/charts/couchbase-cluster/values-local.yaml
+++ b/charts/couchbase-cluster/values-local.yaml
@@ -30,7 +30,7 @@ ingress:
 buckets:
   - name: all-nostr-events
     memory: 512Mi
-    storageBackend: magma
+    storageBackend: couchstore
     evictionPolicy: fullEviction
     ioPriority: high
   - name: dev-eventing-threads
