feat(couchbase): manage admin user via CRs (CouchbaseUser+Group+RoleBinding) for local

--- a/charts/couchbase-cluster/values-common.yaml
+++ b/charts/couchbase-cluster/values-common.yaml
@@ -43,3 +43,10 @@ ingress:
   targetPort: 8091
 
 baseDomain: ""
+
+users:
+  admin:
+    enabled: false
+    name: admin
+    fullName: Admin (GitOps)
+    authSecretName: couchbase-cluster-auth
