fix(couchbase): complete RoleBinding spec (roleRef.kind) for admin user

--- a/charts/couchbase-cluster/templates/users.yaml
+++ b/charts/couchbase-cluster/templates/users.yaml
@@ -24,9 +24,9 @@ metadata:
   name: admin-binding
 spec:
   roleRef:
+    kind: CouchbaseGroup
     name: full-admins
   subjects:
     - kind: CouchbaseUser
       name: {{ $u.name | default "admin" }}
 {{- end }}
-
