chore(argocd): ignore CouchbaseBucket spec.cluster to prevent reconciler churn

--- a/charts/bitiq-umbrella/templates/app-couchbase-cluster.yaml
+++ b/charts/bitiq-umbrella/templates/app-couchbase-cluster.yaml
@@ -25,6 +25,7 @@ spec:
       kind: CouchbaseBucket
       jsonPointers:
         - /status
+        - /spec/cluster
   source:
     repoURL: {{ .Values.repoUrl }}
     targetRevision: {{ .Values.targetRevision }}
