chore(couchbase): mark bucket CRs to ignore extraneous diff noise

--- a/charts/couchbase-cluster/templates/buckets.yaml
+++ b/charts/couchbase-cluster/templates/buckets.yaml
@@ -4,6 +4,8 @@ apiVersion: couchbase.com/v2
 kind: CouchbaseBucket
 metadata:
   name: {{ .name }}
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 spec:
   cluster: {{ $root.Values.clusterName | default "couchbase-cluster" | quote }}
   memoryQuota: {{ .memory | quote }}
